==> skyman1991/Graduate-Project/Git_program/MSP430-v1.2/hardware/A7129.c <==
#include "A7129.h"
#include "common.h"

uint8 A7139_Init(float rfFreq)
{
    SCS_SET;
    SCK_CLEAR;
    MOSI_SET;
    
    A7139_StrobeCmd(CMD_RF_RST);	  //reset A7139 chip
    delay_ms(10);
    
    A7139_Config();		  //config A7139 chip
    delay_ms(10);			  //for crystal stabilized
    A7139_SetCID(0x3475C58B);  //set CID code
    delay_ms(1);
    A7139_SetFreq(rfFreq);	  //set Freq
    delay_ms(10);
    A7139_Cal();
    Correct_State();	
    A7139_StrobeCmd(CMD_STBY);
    
    return 1;		  //IF and VCO calibration
}

uint8 A7139_SetCID(uint32 id)
{    
    SCS_CLEAR;
    SPIx_WriteByte(CMD_CID_W);
    SPIx_WriteByte((uint8)(id>>24));
    SPIx_WriteByte((uint8)(id>>16));
    SPIx_WriteByte((uint8)(id>>8));
    SPIx_WriteByte((uint8)id);
    SCS_SET;
    return 0;
}

void Interrupt_Init(void)
{
    P1DIR &=~ pinGIO2.pin_bm;
    /*halDigioIntSetEdge(&pinGIO2, HAL_DIGIO_INT_RISING_EDGE);
    halDigioIntConnect(&pinGIO2, &EXTI9_5_IRQHandler);
    halDigioIntEnable(&pinGIO2);*/
    P1REN |= pinGIO2.pin_bm;                            // P1.4 pullup
    P1IE |= pinGIO2.pin_bm;                             // P1.4 interrupt enabled
    P1IES |= pinGIO2.pin_bm;                            // HAL_DIGIO_INT_RISING_EDGE
    P1IFG &= ~pinGIO2.pin_bm;                           // P1.4 IFG cleared
   
    A7139_StrobeCmd(CMD_PLL);
    delay_us(2);
    A7139_StrobeCmd(CMD_RX);
    delay_us(2);
  
}
