==> skyman1991/Graduate-Project/Git_program/A7139-v2.3/hardware/A7129/A7129.c <==
#include "common.h"
#include "A7129.h"

u8 A7139_Init(float rfFreq)
{
	

	SCS = 1;
	SCK = 0;
	MOSI = 1;
  A7139_StrobeCmd(CMD_RF_RST);	  //reset A7139 chip
	delay_ms(10);
	A7139_Config();		  //config A7139 chip
	delay_ms(10);			  //for crystal stabilized
	A7139_SetCID(0x3475C58B);  //set CID code
	delay_ms(1);
	A7139_SetFreq(rfFreq);	  //set Freq
	delay_ms(10);
	A7139_Cal();
  Correct_State();	
	A7139_StrobeCmd(CMD_STBY);
	
	return 1;		  //IF and VCO calibration
}

u8 A7139_SetCID(u32 id)
{
	SCS = 0;
	SPIx_WriteByte(CMD_ID_W);
	SPIx_WriteByte((u8)(id>>24));
	SPIx_WriteByte((u8)(id>>16));
	SPIx_WriteByte((u8)(id>>8));
	SPIx_WriteByte((u8)id);
	SCS = 1;
	return 0;
}

void Interrupt_Init(void)
{
		EXTI_InitTypeDef EXTI_InitStructure;
		NVIC_InitTypeDef NVIC_InitStructure;

  	RCC_APB2PeriphClockCmd(RCC_APB2Periph_AFIO,ENABLE);							//使能复用功能时钟

		//GPIOA.0 中断线以及中断初始化配置 上升沿触发 PA0  WK_UP
		GPIO_EXTILineConfig(GPIO_PortSourceGPIOB,GPIO_PinSource6); 
		EXTI_InitStructure.EXTI_Line=EXTI_Line6;
		EXTI_InitStructure.EXTI_Mode = EXTI_Mode_Interrupt;	
  	EXTI_InitStructure.EXTI_Trigger = EXTI_Trigger_Falling;
		EXTI_InitStructure.EXTI_LineCmd = ENABLE;
  	EXTI_Init(&EXTI_InitStructure);																	//根据EXTI_InitStruct中指定的参数初始化外设EXTI寄存器

  	NVIC_InitStructure.NVIC_IRQChannel = EXTI9_5_IRQn;						//使能按键KEY1,KEY0所在的外部中断通道
  	NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority = 2;		//抢占优先级2 
  	NVIC_InitStructure.NVIC_IRQChannelSubPriority = 2;						//子优先级1 
  	NVIC_InitStructure.NVIC_IRQChannelCmd = ENABLE;									//使能外部中断通道
  	NVIC_Init(&NVIC_InitStructure);  	  														//根据NVIC_InitStruct中指定的参数初始化外设NVIC寄存器

	  A7139_StrobeCmd(CMD_PLL);
		delay_us(2);
		A7139_StrobeCmd(CMD_RX);
		delay_us(2);

}
